Plugins/UnrealDotNet/Source/UnrealEngineSharp/Generate/Class/UGameViewportClient.cs

// This file was created automatically, do not modify the contents of this file.

// ReSharper disable InvalidXmlDocComment
// ReSharper disable InconsistentNaming
// ReSharper disable CheckNamespace
// ReSharper disable MemberCanBePrivate.Global

using System;
using System.Runtime.InteropServices;

// Source file C:\Program Files\Epic Games\UE_4.22\Engine\Source\Runtime\Engine\Classes\Engine\GameViewportClient.h:55

namespace UnrealEngine
{
	public partial class UGameViewportClient : UScriptViewportClient
	{
		public UGameViewportClient(IntPtr adress)
			: base(adress)
		{
		}

		public UGameViewportClient(UObject Parent = null, string Name = "GameViewportClient")
			: base(IntPtr.Zero)
		{
			NativePointer = E_NewObject_UGameViewportClient(Parent, Name);
			NativeManager.AddNativeWrapper(NativePointer, this);
		}

		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern int E_PROP_UGameViewportClient_MaxSplitscreenPlayers_GET(IntPtr Ptr);
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_PROP_UGameViewportClient_MaxSplitscreenPlayers_SET(IntPtr Ptr, int Value);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern int E_PROP_UGameViewportClient_ViewModeIndex_GET(IntPtr Ptr);
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_PROP_UGameViewportClient_ViewModeIndex_SET(IntPtr Ptr, int Value);
		
		#region DLLInmport
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern IntPtr E_NewObject_UGameViewportClient(IntPtr Parent, string Name);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UGameViewportClient_CalculateDeadZoneForAllSides(IntPtr self, IntPtr lPlayer, IntPtr canvas, float fTopSafeZone, float fBottomSafeZone, float fLeftSafeZone, float fRightSafeZone, bool bUseMaxPercent);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern StringWrapper E_UGameViewportClient_ConsoleCommand(IntPtr self, string command);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern int E_UGameViewportClient_ConvertLocalPlayerToGamePlayerIndex(IntPtr self, IntPtr lPlayer);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameViewportClient_DetachViewportClient(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameViewportClient_DrawTitleSafeArea(IntPtr self, IntPtr canvas);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameViewportClient_DrawTransition(IntPtr self, IntPtr canvas);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameViewportClient_DrawTransitionMessage(IntPtr self, IntPtr canvas, string message);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UGameViewportClient_GetDisableSplitscreenOverride(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UGameViewportClient_GetMousePosition(IntPtr self, IntPtr mousePosition);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameViewportClient_GetPixelSizeOfScreen(IntPtr self, float width, float height, IntPtr canvas, int localPlayerIndex);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameViewportClient_GetSubtitleRegion(IntPtr self, IntPtr minPos, IntPtr maxPos);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UGameViewportClient_GetUseMouseForTouch(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameViewportClient_GetViewportSize(IntPtr self, IntPtr viewportSize);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UGameViewportClient_HandleToggleFullscreenCommand(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UGameViewportClient_HasBottomSafeZone(IntPtr self, int localPlayerIndex);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UGameViewportClient_HasLeftSafeZone(IntPtr self, int localPlayerIndex);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UGameViewportClient_HasRightSafeZone(IntPtr self, int localPlayerIndex);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UGameViewportClient_HasTopSafeZone(IntPtr self, int localPlayerIndex);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UGameViewportClient_IsExclusiveFullscreenViewport(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UGameViewportClient_IsFullScreenViewport(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UGameViewportClient_IsSimulateInEditorViewport(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameViewportClient_LayoutPlayers(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameViewportClient_NotifyPlayerAdded(IntPtr self, int playerIndex, IntPtr addedPlayer);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameViewportClient_NotifyPlayerRemoved(IntPtr self, int playerIndex, IntPtr removedPlayer);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameViewportClient_PostRender(IntPtr self, IntPtr canvas);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameViewportClient_RebuildCursors(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameViewportClient_RemoveAllViewportWidgets(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameViewportClient_SetCaptureMouseOnClick(IntPtr self, byte mode);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameViewportClient_SetConsoleTarget(IntPtr self, int playerIndex);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameViewportClient_SetDisableSplitscreenOverride(IntPtr self, bool bDisabled);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameViewportClient_SetDropDetail(IntPtr self, float deltaSeconds);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameViewportClient_SetHideCursorDuringCapture(IntPtr self, bool inHideCursorDuringCapture);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameViewportClient_SetIgnoreInput(IntPtr self, bool ignore);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameViewportClient_SetLockDuringCapture(IntPtr self, bool inLockDuringCapture);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameViewportClient_SetMouseLockMode(IntPtr self, byte inMouseLockMode);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameViewportClient_SetSuppressTransitionMessage(IntPtr self, bool bSuppress);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern ObjectPointerDescription E_UGameViewportClient_SetupInitialLocalPlayer(IntPtr self, string outError);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameViewportClient_SetUseSoftwareCursorWidgets(IntPtr self, bool bInUseSoftwareCursorWidgets);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UGameViewportClient_ShouldForceFullscreenViewport(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameViewportClient_ShowTitleSafeArea(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameViewportClient_SSSwapControllers(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameViewportClient_Tick(IntPtr self, float deltaTime);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameViewportClient_UpdateActiveSplitscreenType(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UGameViewportClient_VerifyPathRenderingComponents(IntPtr self);
		
		#endregion
		
		#region Property
		public int MaxSplitscreenPlayers
		{
			get => E_PROP_UGameViewportClient_MaxSplitscreenPlayers_GET(NativePointer);
			set => E_PROP_UGameViewportClient_MaxSplitscreenPlayers_SET(NativePointer, value);
		}

		
		/// <summary>
		/// see enum EViewModeIndex
		/// </summary>
		public int ViewModeIndex
		{
			get => E_PROP_UGameViewportClient_ViewModeIndex_GET(NativePointer);
			set => E_PROP_UGameViewportClient_ViewModeIndex_SET(NativePointer, value);
		}

		#endregion
		
		#region ExternMethods
		
		/// <summary>
		/// pixel size of the deadzone for all sides (right/left/top/bottom) based on which local player it is
		/// </summary>
		/// <return>true</return>
		public bool CalculateDeadZoneForAllSides(ULocalPlayer lPlayer, UCanvas canvas, float fTopSafeZone, float fBottomSafeZone, float fLeftSafeZone, float fRightSafeZone, bool bUseMaxPercent = false)
			=> E_UGameViewportClient_CalculateDeadZoneForAllSides(this, lPlayer, canvas, fTopSafeZone, fBottomSafeZone, fLeftSafeZone, fRightSafeZone, bUseMaxPercent);
		
		
		/// <summary>
		/// Process Console Command
		/// </summary>
		/// <param name="command">command to process</param>
		public virtual string ConsoleCommand(string command)
			=> E_UGameViewportClient_ConsoleCommand(this, command);
		
